# record-app

./: .gitignore  CLAUDE.md  HANDOFF.md  REUSABLE_WORKFLOW_TEMPLATE.md  package.json  render.yaml
docs/: COLLABORATION.md  HANDOVER.md  PLAN-v2-smart-flow.md  QA-REPORT.md
docs/01-plan/features/: firebase-auth.plan.md
docs/02-design/features/: firebase-auth.design.md
docs/03-analysis/: firebase-auth.analysis.md  record-app.analysis.md
docs/build-logs/: 2026-04-01.txt  2026-04-08-2.txt  2026-04-08-qa.txt  2026-04-08.txt  2026-04-09.txt  2026-04-10-v2.txt  2026-04-10.txt
web/: .env.example  Dockerfile  package-lock.json  package.json  server.js
web/prisma/: schema.prisma  seed.ts
web/prisma/migrations/20260324150246_init/: migration.sql
web/src/app/: layout.tsx  page.tsx
web/src/app/api/health/: route.ts
web/src/app/api/jobs/: route.ts
web/src/app/jobs/: page.tsx
web/src/app/login/: page.tsx
web/src/app/presets/: page.tsx
web/src/app/templates/: page.tsx
web/src/app/upload/: page.tsx
web/src/components/: AuthGuard.tsx  ClientLayout.tsx  Nav.tsx  WorkerStatus.tsx
web/src/lib/: api.ts  auth-context.tsx  auth-middleware.ts  constants.ts  db.ts  firebase-admin.ts  firebase.ts  report-templates.ts
web/src/types/: index.ts
worker/: .env.example  pyproject.toml  requirements.txt
worker/app/: config.py  main.py
worker/app/api/: health.py  jobs.py  presets.py  router.py  schemas.py  upload.py
worker/app/db/: database.py  models.py  seed_presets.py
worker/app/services/: job_processor.py  notebooklm_service.py
(+8 files in other folders)
